@@ -3,6 +3,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 2.4.6
   f - added an asynchronous option for qsig, specified with -a.
   b - fix to cleanup job that is left in running state after a mom restart
+  e - qsub's -W can now parse attributes with quoted lists, for example: 
+      qsub script -W attr="foo,foo1,foo2,foo3" will set foo,foo1,foo2,foo3
+      as attr's value.
 
 2.4.5
   b - epilogue.user scripts were being run with prologue argments. Fixed
